# asapi

./: #Cargo.toml#  .gitignore  Cargo.toml  Cargo.toml.release  Makefile  README.clickhouse.org  README.http.org  README.kafka.org  README.mongo.org  README.org  README.redis.org  README.sqlx.org  asapi_workspaces.json  asapi_workspaces.json.bak  build-release.sh  licenses.org  rustfmt.toml  swagger-example.json
egui-dynamic/: Cargo.toml
infrastructure/: docker-compose.yml  extrac_icon_moon.js
infrastructure/mariadb/: 01-creation-and-data.sql
redis-dynamic/: Cargo.toml
redis-dynamic/src/: lib.rs
sqlite-ddbb/: db.sqlite3  pantry.sqlite3  stack.sqlite3
src/: app_state.rs  main.rs  top_bar.rs
src/clickhousem/: Cargo.toml  domain.rs  mod.rs  presenter.rs  state.rs  view.rs
src/clickhousem/components/: central_panel.rs  contextual_menus.rs  mod.rs  paginator.rs  sidenav.rs  table.rs
src/clickhousem/src/: domain.rs  lib.rs  map_data_type_helpers.rs  presenter.rs  state.rs  view.rs
src/clickhousem/src/components/: central_panel.rs  contextual_menus.rs  mod.rs  paginator.rs  sidenav.rs  table.rs
src/common/: Cargo.toml  fs.rs  generator.rs  icon_moon.rs  internationalization.rs  macros.rs  mod.rs  syntax_highlighting.rs  traits.rs
src/common/src/: fs.rs  i18n_clickhouse.rs  i18n_config.rs  i18n_docker.rs  i18n_http.rs  i18n_kafka.rs  i18n_mongo.rs  i18n_redis.rs  i18n_sqlx.rs  internationalization.rs  lib.rs  traits.rs
src/components/: Cargo.toml  c_macros.rs  mod.rs  result_panel.rs  toggle_selector.rs  toggle_switch.rs  top_bar.rs  widgets.rs
src/components/src/: c_macros.rs  lib.rs  result_panel.rs  separators.rs  toggle_selector.rs  toggle_switch.rs  widgets.rs
src/dockerm/: Cargo.toml
src/dockerm/src/: domain.rs  lib.rs  presenter.rs  state.rs  view.rs
src/dockerm/src/components/: central_panel.rs  image_details.rs  mod.rs  sidenav_panel.rs  widget_macros.rs
src/httpm/: Cargo.toml  methods.rs  mod.rs  request.rs  state.rs  swagger.rs  view.rs  workspace.rs
src/httpm/components/: body_params.rs  context_menus.rs  header_params.rs  mod.rs  sidenav.rs  workspaces_subheader.rs
src/httpm/performance/: mod.rs  view.rs
src/httpm/performance/components/: mod.rs  params.rs
src/httpm/src/: methods.rs  request.rs  state.rs  swagger.rs  view.rs
src/httpm/src/components/: body_params.rs  context_menus.rs  mod.rs  sidenav.rs  workspaces_subheader.rs
src/httpm/src/performance/: mod.rs  view.rs
src/httpm/swagger/: mod.rs  parser.rs  serializer.rs
src/kafkam/: Cargo.toml  admin.rs  mod.rs  presenter.rs  producer.rs  state.rs  view.rs
src/kafkam/components/: clusters_panel.rs  consumer_panel.rs  mod.rs  sidenav.rs  stats_panel.rs  subscribe_panel.rs  topics_panel.rs  widgets.rs
src/kafkam/src/: admin.rs  presenter.rs  producer.rs  view.rs
src/kafkam/src/components/: clusters_panel.rs  consumer_panel.rs  sidenav.rs  stats_panel.rs  topics_panel.rs  widgets.rs
src/licensem/: Cargo.toml
src/licensem/src/: check.rs  device_info.rs  lib.rs
src/mongom/: Cargo.toml  actions.rs  bson_type.rs  connection.rs  filter.rs  mod.rs  parser.rs  presenter.rs  state.rs  statements.rs  view.rs
src/mongom/components/: combo_boxes.rs  delete_panel.rs  filters.rs  find_panel.rs  insert_panel.rs  mod.rs  replace_panel.rs  sidenav.rs  update_panel.rs
src/mongom/document/: delete.rs  find.rs  mod.rs
src/mongom/src/: actions.rs  connection.rs  filter.rs  lib.rs  parser.rs  presenter.rs  state.rs  view.rs
src/mongom/src/components/: combo_boxes.rs  delete_panel.rs  filters.rs  find_panel.rs  insert_panel.rs  replace_panel.rs  sidenav.rs  update_panel.rs
src/mysqlm/: data_generation.rs  mysql_type.rs  parser.rs  presenter.rs  state.rs  view.rs
src/mysqlm/components/: contextual_menus.rs  sidenav.rs
src/natsm/: Cargo.toml
src/pgm/: data_generation.rs  parser.rs  pg_type.rs  presenter.rs  state.rs  view.rs
src/pgm/components/: contextual_menus.rs  sidenav.rs
src/rabbitmqm/: Cargo.toml
src/redism/: Cargo.toml  connection.rs  ejemplo_pubsub.rs  mod.rs  presenter.rs  redis_macros.rs  state.rs  utils.rs  view.rs
src/redism/components/: contextual_menus.rs  hash_panel.rs  json_panel.rs  lists_panel.rs  menu_option.rs  mod.rs  pubsub_panel.rs  sets_panel.rs  sidenav.rs  streams_panel.rs  strings_panel.rs
src/redism/presenters/: hash.rs  json.rs  list.rs  mod.rs  pubsub.rs  set.rs  stream.rs  string.rs  zset.rs
src/redism/src/: lib.rs  parser.rs  redis_macros.rs  state.rs  traits.rs  view.rs
src/redism/src/components/: contextual_menus.rs  hash_panel.rs  json_panel.rs  lists_panel.rs  menu_option.rs  pubsub_panel.rs  sets_panel.rs  sidenav.rs  streams_panel.rs  strings_panel.rs
src/redism/src/presenters/: hash.rs  json.rs  list.rs  mod.rs  pubsub.rs  set.rs  stream.rs  string.rs  zset.rs
src/sqlitem/: data_generation.rs  mod.rs  parser.rs  presenter.rs  state.rs  view.rs
src/sqlitem/components/: contextual_menus.rs  sidenav.rs
src/sqlm/: Cargo.toml
src/sqlm/src/: lib.rs
src/sqlm/src/mysqlm/: data_generation.rs  mod.rs  parser.rs  view.rs
src/sqlm/src/mysqlm/components/: sidenav.rs
src/sqlm/src/pgm/: data_generation.rs  mod.rs  parser.rs  pg_type.rs  presenter.rs  view.rs
src/sqlm/src/pgm/components/: sidenav.rs
src/sqlm/src/sqlitem/: data_generation.rs  parser.rs  view.rs
src/sqlm/src/sqlitem/components/: contextual_menus.rs  sidenav.rs
src/sqlm/src/sqlx_common/: data_generation.rs  pagination.rs  presenter.rs  table.rs  traits.rs
src/sqlm/src/sqlx_common/components/: context_menus.rs  window_generator.rs  window_insertion.rs
src/sqlx_common/: data_generation.rs  pagination.rs  presenter.rs  state.rs  table.rs  traits.rs
src/sqlx_common/components/: context_menus.rs  window_generator.rs  window_insertion.rs
src/sqlx_module/: data_generation.rs  mod.rs  pagination.rs  presenter.rs  state.rs  table.rs  traits.rs
src/sqlx_module/components/: context_menus.rs  mod.rs  window_generator.rs  window_insertion.rs
