[package]
name = "asapi"
# + Versiones mayores, porque entiendo que es casi una nueva aplicación
# + Versiones menores, nuevo conector
# + Versiones terciarias, mejoras/bugs
# + Versiones preestablecias a seguir
#   0.2.0 -> sqlx
#   0.3.0 -> mongo
#   0.3.1 -> mejora kafka
#   0.3.2 -> mejora redis
#   0.3.3 -> subida archivos
#   0.3.4XX -> refactorizaciones varias
#   0.3.x -> mejora http rendimiento
#   0.4.0 -> clickhouse
#   0.5.0 -> uso workspaces para mejora rendimiento
#   0.5.x -> corrección bugs/pequeñas mejoras
#   0.6.0 -> licencia <<== AQUÍ ESTAMOS
version = "0.6.0"
edition = "2021"

[profile.dev]
debug = 0
opt-level = 1
strip = "debuginfo"
lto = "off"

[profile.release]
opt-level     = 3       # https://doc.rust-lang.org/cargo/reference/profiles.html#opt-level
lto           = "fat"   # Enable link-time optimization # antes estaba a `true`
codegen-units = 1       # Reduce number of codegen units to increase optimizations
panic         = 'abort' # Abort on panic
strip         = true    # Strip symbols from binary*

[profile.dev.build-override]
opt-level = 3

[workspace]
members = [
    "src/common",
    "src/components",
    "src/licensem",
    "src/clickhousem",
    "src/httpm",
    "src/kafkam",
    "src/mongom",
    "src/redism",
    "src/sqlm",
]

[dependencies]
# ---------------------------------------------------------------------------
# Dependencias generales u ortogonales a todo el proyecto.
# ---------------------------------------------------------------------------
egui = "0.27.2"
eframe = { version = "0.27.2", features = ["glow"], default-features = false }
egui-file-dialog = "0.5.0"
env_logger = { version = "0.11.3", default-features = false }
log = "0.4.21"
serde = { version = "1.0.197", default-features = false }
serde_json = "1.0.117"
tokio = "1.37.0"

common = { path = "src/common" }
components = { path = "src/components" }
clickhousem = { path = "src/clickhousem" }
httpm = { path = "src/httpm" }
kafkam = { path = "src/kafkam" }
mongom = { path = "src/mongom" }
redism = { path = "src/redism" }
sqlm = { path = "src/sqlm" }
license = { path = "src/licensem" }
