[package]
name = "asapi"
# + Versiones mayores, porque entiendo que es casi una nueva aplicación
# + Versiones menores, nuevo conector
# + Versiones terciarias, mejoras/bugs
# + Versiones preestablecias a seguir
#   0.2.0 -> sqlx
#   0.3.0 -> mongo
#   0.3.1 -> mejora kafka
#   0.3.2 -> mejora redis
#   0.3.3 -> subida archivos
#   0.3.4XX -> refactorizaciones varias
#   0.3.x -> mejora http rendimiento
#   0.4.0 -> clickhouse
#   0.5.0 -> uso workspaces para mejora rendimiento
#   0.5.x -> corrección bugs/pequeñas mejoras
#   0.6.0 -> licencia
#   0.7.0 -> Usando workspaces.depenencies <<== AQUÍ ESTAMOS
version = "0.7.0"
edition = "2021"

[profile.dev]
debug = 0
opt-level = 1
strip = "debuginfo"
lto = "off"

[profile.release]
opt-level     = 3       # https://doc.rust-lang.org/cargo/reference/profiles.html#opt-level
lto           = "fat"   # Enable link-time optimization # antes estaba a `true`
codegen-units = 1       # Reduce number of codegen units to increase optimizations
panic         = 'abort' # Abort on panic
strip         = true    # Strip symbols from binary*

[profile.dev.build-override]
opt-level = 3

# https://doc.rust-lang.org/rustc/codegen-options/index.html#target-cpu
[build]
rustflags = ["-C", "target-cpu=native", "-Z", "threads=8"]

[workspace]
members = [
    "src/common",
    "src/components",
    "src/licensem",
    "src/clickhousem",
    "src/httpm",
    "src/kafkam",
    "src/mongom",
    "src/redism",
    "src/sqlm",
    "src/dockerm",
    # "src/natsm",
    # "src/rabbitmqm",
]


[workspace.dependencies]
eframe = { version = "0.30.0", features = ["glow"], default-features = false }
egui = "0.30.0"
egui-file-dialog = "0.8.0"
egui_extras = "0.30.0"
egui_json_tree = "0.10.0"
egui_plot = "0.30.0"
env_logger = { version = "0.11.6", default-features = false }
log = "0.4.25"
serde = { version = "1.0.217", default-features = false, features = ["derive"]}
serde_json = "1.0.137"
tokio = "1.43.0"
tokio-util = "0.7.13"
futures = { version = "0.3.31", default-features = false }
futures-util = { version = "0.3.30", default-features = false }
chrono = { version = "0.4.39", default-features = false }
uuid = { version = "1.12.1", default-features = false }
regex = "1.11.1"


[dependencies]
cryptify = "3.1.1"

egui = { workspace = true }
eframe = { workspace = true }
egui-file-dialog = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

common = { path = "src/common" }
components = { path = "src/components" }
clickhousem = { path = "src/clickhousem" }
httpm = { path = "src/httpm" }
kafkam = { path = "src/kafkam" }
mongom = { path = "src/mongom" }
redism = { path = "src/redism" }
sqlm = { path = "src/sqlm" }
dockerm = { path = "src/dockerm" }
licensem = { path = "src/licensem" }

# rabbitmqm = { path = "src/rabbitmqm" }
# natsm = { path = "src/natsm" }

[package.metadata.scripts]
run = "cargo run"
check = "cargo check"
build = "cargo build"
release = "cargo build --release"
