[package]
name = "clickhousem"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { workspace = true }
egui = { workspace = true }
egui_extras = { workspace = true }
egui_json_tree = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
chrono = { workspace = true }
# chrono-tz = { workspace = true }
chrono-tz = { version = "0.8", default-features = false }
uuid = { workspace = true }
regex = { workspace = true }

common = { path = "../common" }
components = { path = "../components" }

clickhouse-rs = "1.1.0-alpha.1"
