[package]
name = "common"
version = "0.1.0"
edition = "2021"

[profile.dev]
debug = 0
opt-level = 1
strip = "debuginfo"
lto = "off"

[profile.dev.build-override]
opt-level = 3

[target.x86_64-unknown-linux-gnu]
linker = "/usr/bin/clang-15"
rustflags = ["-C", "link-arg=--ld-path=/usr/local/bin/mold"]

[dependencies]
# serde = { version = "1.0.197", default-features = false }
serde = { version = "1.0.197" }
serde_json = "1.0.117"
tokio = "1.37.0"
tokio-util = "0.7.11"
