[package]
name = "dockerm"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
egui_extras = { workspace = true }
egui_json_tree = { workspace = true }
egui-file-dialog = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
log = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
futures-util = { workspace = true }
egui_plot = { workspace = true }

common = { path = "../common" }
components = { path = "../components" }


bollard = { version = "*", features = ["chrono"] }

