[package]
name = "httpm"
version = "0.1.0"
edition = "2021"

[profile.dev]
debug = 0
opt-level = 1
strip = "debuginfo"
lto = "off"

[profile.dev.build-override]
opt-level = 3

[target.x86_64-unknown-linux-gnu]
linker = "/usr/bin/clang-15"
rustflags = ["-C", "link-arg=--ld-path=/usr/local/bin/mold"]

[dependencies]
common = { path = "../common" }
components = { path = "../components" }
serde = { version = "1.0.197", default-features = false }
serde_json = "1.0.117"
eframe = { version = "0.27.2", features = ["glow"], default-features = false }
egui = "0.27.2"
egui_extras = "0.27.2"
egui_json_tree = "0.5.0"
tokio = "1.37.0"
tokio-util = "0.7.11"
log = "0.4.21"

egui_plot = "0.27.2"
egui-file-dialog = "0.5.0"
reqwest = { version = "0.12.4", features = ["json", "multipart", "stream"], default-features = false }
futures = { version = "0.3.30", default-features = false }
mime_guess = { version = "2.0.4", default-features = false }
