[package]
name = "httpm"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { workspace = true }
egui = { workspace = true }
egui_extras = { workspace = true }
egui_json_tree = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
log = { workspace = true }
futures = { workspace = true }
egui-file-dialog = { workspace = true }

common = { path = "../common" }
components = { path = "../components" }

egui_plot = "0.29.0"
reqwest = { version = "0.12.5", features = ["json", "multipart", "stream", "default-tls"], default-features = false }
mime_guess = { version = "2.0.4", default-features = false }
