[package]
name = "licensem"
version = "0.2.1"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }

httpm = { path = "../httpm" }
common = { path = "../common" }

hmac = "0.12.1"
aes-gcm = "0.10.3"
hex = "0.4"
secp256k1 = "0.29.0"
ring = "0.17.8"
chrono = { version = "0.4.37", default-features = false, features=["serde"] }
sha2 = "0.10.8"
pbkdf2 = "0.12.2"
k256 = {version="0.13.3", features=["ecdh", "ecdsa", "arithmetic"]}
whoami = "1.5.1"
mac_address="1.1.7"
directories = "5.0"
