[package]
name = "mongom"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
components = { path = "../components" }
serde = { version = "1.0.197", default-features = false }
serde_json = "1.0.117"
eframe = { version = "0.27.2", features = ["glow"], default-features = false }
egui = "0.27.2"
egui_extras = "0.27.2"
egui_json_tree = "0.5.0"
tokio = "1.37.0"
tokio-util = "0.7.11"
log = "0.4.21"
futures = { version = "0.3.30", default-features = false }

bson = "2.10.0"
mongodb = "2.8.2"
