[package]
name = "rabbitmqm"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
egui_extras = { workspace = true }
egui_json_tree = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
log = { workspace = true }
futures = { workspace = true }


common = { path = "../common" }
components = { path = "../components" }

amqprs = "2.0.0"
