[package]
name = "redism"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
egui_extras = { workspace = true }
egui_json_tree = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
log = { workspace = true }

common = { path = "../common" }
components = { path = "../components" }

redis = { version = "0.25.2", features = ["tokio-comp", "streams", "json"] }