[package]
name = "sqlm"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
egui_extras = { workspace = true }
egui_json_tree = { workspace = true }
egui-file-dialog = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
log = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }

common = { path = "../common" }
components = { path = "../components" }

rust_decimal = { version = "1.35.0", default-features = false }
sqlx = { version = "0.8.3", features = ["chrono", "mysql", "postgres", "rust_decimal", "sqlite", "uuid", "runtime-tokio"], default-features = false }
